--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "sm-api",
-  "version": "1.0.0",
-  "description": "SM web page API",
-  "main": " ",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/adrisantos11/sm-api.git"
-  },
-  "author": "Adrián Santos Mena",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/adrisantos11/sm-api/issues"
-  },
-  "homepage": "https://github.com/adrisantos11/sm-api#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+	"name": "sm-api",
+	"version": "1.0.0",
+	"description": "SM web page API",
+	"main": " ",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/adrisantos11/sm-api.git"
+	},
+	"author": "Adrián Santos Mena",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/adrisantos11/sm-api/issues"
+	},
+	"homepage": "https://github.com/adrisantos11/sm-api#readme",
+	"dependencies": {
+		"express": "^4.18.2"
+	}
 }
